# AMLDF

./: .flake8  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_POLISH_REPORT.md  Makefile  README.md  SECURITY.md  TEST_REPORT.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: main.py
backend/api/: attack.py  defend.py  detect.py  evaluate.py
backend/engines/: base.py
backend/engines/attacks/: fgsm.py  llm_injection.py  pgd.py  text_substitution.py
backend/engines/defences/: adversarial_training.py  feature_squeeze.py
backend/engines/detectors/: drift.py
backend/engines/evaluation/: threat_scorer.py
backend/models/: vision_model.py
backend/utils/: logger.py
docs/: API.md  ARCHITECTURE.md
frontend/: dashboard.js  index.html  styles.css
tests/: test_api.py  test_engines.py
